# auto-MicroK8s

./: .gitignore  Jenkinsfile  LICENSE  README.md
cloud-init/: manage-servers.bat  manage-servers.sh  server.yaml  server1.yaml  start-servers.bat
snaps/auto-microk8s-cluster/: prospector.yaml  pyproject.toml  snap-management.sh  snapcraft.yaml
snaps/auto-microk8s-cluster/docs/source/: conf.py  index.rst
snaps/auto-microk8s-cluster/snap/hooks/: configure.py
snaps/auto-microk8s-cluster/src/auto_microk8s_cluster/: avahi.py  build_cluster.py  neighbours.py  send-morse.py  send_morse.py  service.py  service.py (modify)  setup_system.py
snaps/auto-microk8s-cluster/src/auto_microk8s_cluster/html/: listen-morse.html
snaps/auto-microk8s-cluster/src/auto_microk8s_cluster/static/css/: styles.css
snaps/auto-microk8s-cluster/src/auto_microk8s_cluster/templates/: base.html  dashboard.html  login.html  setup_password.html
snaps/auto-microk8s-cluster/tests/: conftest.py  conftest.py (create)  conftests.py  test_service.py  test_templates.py
snaps/qemu-guest-agent/: snapcraft.yaml
typings/auto_microk8s_cluster/: neighbours.pyi  service.pyi  setup_system.pyi
typings/dasbus/: connection.pyi  constants.pyi  error.pyi  namespace.pyi  signal.pyi  specification.pyi  typing.pyi  xml.pyi
typings/dasbus/client/: handler.pyi  property.pyi  proxy.pyi
typings/dasbus/server/: handler.pyi  interface.pyi
typings/requests_unixsocket/: __init__.pyi  adapters.pyi  testutils.pyi
typings/sounddevice/: __init__.pyi
typings/sounddevice/numpy-old/_core/: __init__.pyi
typings/sounddevice/numpy-old/char/: __init__.pyi
typings/sounddevice/numpy-old/fft/: __init__.pyi
typings/sounddevice/numpy-old/linalg/: __init__.pyi
ubuntu-core-images/: auto-microk8s-24-amd64.json  auto-microk8s-24-amd64.model  auto-microk8s-24-pi-arm64.json  seed.manifest
website/: listen-morse.html  morse-pro-listener.js
